# MNIST-ML-cpp

./: .gitignore  CMakeLists.txt  functions.h  main.cpp  sfmlFuncs.h
